@@ -6,10 +6,10 @@
 #include "fityk/luabridge.h"
 #include "catch.hpp"
 
-TEST_CASE("F:executef", "") {
+TEST_CASE("formatted F:execute", "") {
     boost::scoped_ptr<fityk::Fityk> fik(new fityk::Fityk);
     fityk::Full* priv = fik->priv();
-    std::string str = "a=123.456; F:executef('$v = %g', a)";
+    std::string str = "a=123.456; F:execute('$v = %g' % a)";
     priv->lua_bridge()->exec_lua_string(str);
     double v = fik->get_variable("v")->value();
     REQUIRE(v == 123.456);
